@@ -80,6 +80,8 @@ joystick_threshold = 8000
 
 levelset = original
 
+; The base directory where SDLPoP will look for custom levelsets. (default = mods)
+mods_folder = mods
 
 
 [AdditionalFeatures]
