@@ -219,7 +219,7 @@ dat_type *__pascal open_dat(const char *filename,int drive) {
 	else {
 		char filename_mod[POP_MAX_PATH];
 		// before checking the root directory, first try mods/MODNAME/
-		snprintf(filename_mod, sizeof(filename_mod), "mods/%s/%s", levelset_name, filename);
+		snprintf(filename_mod, sizeof(filename_mod), "%s/%s/%s", mods_folder, levelset_name, filename);
 		fp = fopen(filename_mod, "rb");
 		if (fp == NULL) {
 			fp = open_dat_from_root_or_data_dir(filename);
@@ -2357,7 +2357,7 @@ void load_from_opendats_metadata(int resource_id, const char* extension, FILE** 
 			else {
 				char image_filename_mod[POP_MAX_PATH];
 				// before checking data/, first try mods/MODNAME/data/
-				snprintf(image_filename_mod, sizeof(image_filename_mod), "mods/%s/%s", levelset_name, image_filename);
+				snprintf(image_filename_mod, sizeof(image_filename_mod), "%s/%s/%s", mods_folder, levelset_name, image_filename);
 				//printf("loading (binary) %s",image_filename_mod);
 				fp = fopen(locate_file(image_filename_mod), "rb");
 				if (fp == NULL) {
